--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body >
     <div id="importer-container"></div>
     <div id="one">
-      <h4 id="onehead">The celebration's not over yet: Rewards member get a 0.30 oz.SkinMedica Lytera 2.0 Pigment Correcting Serum, a
+      <h4 id="onehead" >The celebration's not over yet: Rewards member get a 0.30 oz.SkinMedica Lytera 2.0 Pigment Correcting Serum, a
         $36 value,FREE with any purchase.</h4>
     </div>
 
@@ -68,8 +68,7 @@
                         <span class="price1">$295.00</span>
                         <div class="buy" ><div>QUICK BUY</div></div>
                     </div>
-                </div>
-                <div id="p2" class="product1-card">
+                </div>                <div id="p2" class="product1-card">
                     <div class="product1-image">
                       
                         <img src="images/c12.png" class="product1-thumb" alt="">
@@ -496,7 +495,7 @@
 
     <div><img src="https://static.thcdn.com/images/small/webp/widgets/208-us/35/HP_LPSQ_BANNER_676x556-044335.jpg">
       <h3 class="sixhead">New from Dr.Dennis Gross</h3>
-      <p class="sixp">Promotes visibly firmer,brighter & more even-looing skin while<br><br><br>
+      <p class="sixp">Promotes visibly firmer,brighter & more even-looing skin while<br>
          helping to strengthen its moisture barrier.</p>
 
     </div>
